--- a/changelog/18.09.2.md
+++ b/changelog/18.09.2.md
@@ -1,5 +1,11 @@
 # Speedio Atlas: Notas da atualização 18.09.2
 
+Grandes atualizações frequentemente trazem novos casos com os quais a equipe não conta. Bugs fazem parte do ciclo natural do software e é virtualmente impossível se proteger de todos eles antes de lançar uma nova versão. Com os avanços focados em facilitar o processo de prospecção que obtivemos nas atualizações de julho e agosto, setembro tem sido um mês de arredondar os cantos e fechar as pontas soltas.
+
+O patch `18.09.2` é uma atualização intermediária, feita em uma semana, diferente das versões comuns que têm sido lançadas, normalmente, a cada quinzena. Abaixo vocês poderão conferir os problemas resolvidos neste ciclo que entram no ar no dia 10/09.
+
+Boa prospecção!
+
 ## Geral
 - Resolvidos alguns problemas de layout das páginas introduzidos na última atualização
 - Resolvidos problemas de permissão ao tentar realizar ações relacionadas a listas em várias páginas do app
