--- a/changelog/18.09.3.md
+++ b/changelog/18.09.3.md
@@ -1,4 +1,10 @@
 # Notas da atualização `18.09.3`
 
 ## Listas de prospecção
+
+### Melhorias
+- A lista de telefones foi repensada para funcionar melhor em todas as resoluções
+- A lista de telefones agora oferece a oportunidade de adicionar registros de interação ligados aos telefones
+
+### Solução de problemas
 - Resolvido bug em que as barras de progresso na aba Resumo pareciam ser clicáveis
