--- a/changelog/18.09.3.md
+++ b/changelog/18.09.3.md
@@ -8,3 +8,8 @@
 
 ### Solução de problemas
 - Resolvido bug em que as barras de progresso na aba Resumo pareciam ser clicáveis
+
+## Controle
+
+### Melhorias
+- Na linha do tempo de clientes, também será listado o número de telefone associado a um registro de conversa, se o registro foi criado a partir de um número
