--- a/changelog/18.09.3.md
+++ b/changelog/18.09.3.md
@@ -8,6 +8,7 @@
 
 ### Solução de problemas
 - Resolvido bug em que as barras de progresso na aba Resumo pareciam ser clicáveis
+- Resolvido bug em que as listas excluídas voltavam a aparecer para os usuários que as removeram
 
 ## Controle
 
