--- a/changelog/18.09.3.md
+++ b/changelog/18.09.3.md
@@ -7,6 +7,7 @@
 - A lista de telefones agora oferece a oportunidade de adicionar registros de interação ligados aos telefones
 
 ### Solução de problemas
+- O número de telefones adicionados agora é contabilizado corretamente quando se visualiza uma lista como supervisor
 - Resolvido bug em que as barras de progresso na aba Resumo pareciam ser clicáveis
 - Resolvido bug em que as listas excluídas voltavam a aparecer para os usuários que as removeram
 
