--- a/changelog/18.09.3.md
+++ b/changelog/18.09.3.md
@@ -11,6 +11,11 @@
 - Resolvido bug em que as barras de progresso na aba Resumo pareciam ser clicáveis
 - Resolvido bug em que as listas excluídas voltavam a aparecer para os usuários que as removeram
 
+## Busca
+
+### Solução de problemas
+- Navegar entre as páginas de resultados usando o filtro 'Tenham os campos' agora retorna os resultados corretos
+
 ## Controle
 
 ### Melhorias
