--- a/changelog/18.09.3.md
+++ b/changelog/18.09.3.md
@@ -1,5 +1,13 @@
 # Notas da atualização `18.09.3`
 
+## Nova página (beta): Administrador de usuários
+Uma nova página permite que usuários Titan administrem as contas de equipe. Nela, é possível criar e editar credenciais de contas para outros usuários com limite de uso compartilhado. A página é acessível através da URL https://app.speedio.com.br/users/supervisor ou de um botão na página Controle.
+
+No momento, a funcionalidade está em **beta** e feedback sobre problemas é bem-vindo!
+
+## Atualizações no comportamento de contas
+Novas contas com uso compartilhado agora contabilizarão seu uso diretamente na conta do supervisor. Isso permite uma administração centralizada e monitoramento de uso entre equipes, além de permitir que o responsável pelas contas visualize a contagem atualizada a qualquer momento.
+
 ## Listas de prospecção
 
 ### Melhorias
