--- a/changelog/18.09.3.md
+++ b/changelog/18.09.3.md
@@ -8,11 +8,15 @@ No momento, a funcionalidade está em **beta** e feedback sobre problemas é bem
 ## Atualizações no comportamento de contas
 Novas contas com uso compartilhado agora contabilizarão seu uso diretamente na conta do supervisor. Isso permite uma administração centralizada e monitoramento de uso entre equipes, além de permitir que o responsável pelas contas visualize a contagem atualizada a qualquer momento.
 
+## Problemas no Caller
+Nosso validador de telefones apresentou alguns problemas nas últimas semanas decorrentes de atualizações nos nossos servidores. Dedicamos algum tempo de nossa produção resolvendo esses problemas e melhorando a contenção de erros para que a validação dos telefones não seja interrompida tão facilmente. Algumas listas cujas validações já tinham sido solicitadas foram atualizadas novamente para exibir os resultados corretos.
+
 ## Listas de prospecção
 
 ### Melhorias
 - A lista de telefones foi repensada para funcionar melhor em todas as resoluções
 - A lista de telefones agora oferece a oportunidade de adicionar registros de interação ligados aos telefones
+  - Também é possível adicionar lembretes do tipo "ligar novamente" ao adicionar registros
 
 ### Solução de problemas
 - O número de telefones adicionados agora é contabilizado corretamente quando se visualiza uma lista como supervisor
